# fastapi_version_handler

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
fastapi_version_handler/: __init__.py  dependencies.py  handlers.py  middleware.py  routers.py  utils.py
fastapi_version_handler/templates/: dashboard.html
tests/: test_date_routes.py  test_handlers.py  test_mixed_version_routes.py  test_unversioned_routes.py  test_utils.py  test_version_routes.py
